--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--
   <base href="https://www.redfireconsultants.org">
-  -->
-  <!--
+  --> 
+<!--
   <base href="http://calpage.sytes.net>"
   -->
-  <base href="https://cocky-swirles-9d63eb.netlify.app">
-  
-  <title>DreamweaverBootstrap</title>
+<base href="https://cocky-swirles-9d63eb.netlify.app">
+<title>DreamweaverBootstrap</title>
 
-  <!-- Bootstrap -->
-  <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
+<!-- Bootstrap -->
+<link href="css/bootstrap-4.4.1.css" rel="stylesheet">
 
-  <!--
+<!--
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
   -->
-  
-  </head>
+
+</head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <a class="navbar-brand" href="#" style="color: red">RedFire</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
@@ -29,20 +28,20 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active"> <a class="nav-link" href="#">Home</a> </li>
       <li class="nav-item active"> <a class="nav-link" href="/casestudies/case-studies.html">CaseStudies</a> </li>
-	<!--	
+      <!--	
       <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Action</a> <a class="dropdown-item" href="#">Another action</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a> </div>
       </li>
--->		
+-->
     </ul>
-<!--	  
+    <!--	  
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
--->
+--> 
   </div>
 </nav>
 <div class="container mt-2">
@@ -50,7 +49,7 @@
     <div class="col-12">
       <div class="jumbotron">
         <h1 class="text-center">Is your software project in trouble?&nbsp;</h1>
-<!--		 
+        <!--		 
         <div class="row justify-content-center">
           <div class="col-auto">
             <p><a class="btn btn-success btn-lg" href="#" role="button">FREE TRIAL</a> </p>
@@ -59,7 +58,7 @@
             <p><a class="btn btn-primary btn-lg" href="#" role="button">BUY NOW</a> </p>
           </div>
         </div>
--->		  
+-->
         <p class="text-center"><strong>If so, we can get it back on track</strong>.</p>
         <img src="images/home-jumbotron.jpg" width="1200" height="200" alt="" class="img-fluid"> </div>
     </div>
@@ -67,17 +66,17 @@
 </div>
 <div class="container">
 <div class="row">
-    <div class="text-center col-md-6 col-12 col-xl-12">
-      <h3>How we do it</h3>
-      <p>We bring four critical skills to bear on your project. They work in synegery to produce results, and are discussed briefly below. A number of <a href="/casestudies">case studies</a> are also presented to help illustrate this methodology.</p>
-     <!-- <a class="btn btn-danger btn-lg" href="#" role="button">Tutorials</a> </div> -->
-<!--
+  <div class="text-center col-md-6 col-12 col-xl-12">
+    <h3>How we do it</h3>
+    <p>We bring four critical skills to bear on your project. They work in synegery to produce results, and are discussed briefly below. A number of <a href="/casestudies">case studies</a> are also presented to help illustrate this methodology.</p>
+    <!-- <a class="btn btn-danger btn-lg" href="#" role="button">Tutorials</a> </div> --> 
+    <!--
 		<div class="text-center col-md-6 col-12">
       <h3>Lorem ipsum</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, magnam?</p>
       <a class="btn btn-info btn-lg" href="#" role="button">Documentation</a>
 	</div>
--->		
+--> 
   </div>
 </div>
 <hr>
@@ -115,7 +114,7 @@
     </div>
   </div>
 </section>
--->
+--> 
 <!--	
 <div class="container mt-4">
   <div class="row">
@@ -137,7 +136,7 @@
     </div>
   </div>
 </div>
--->	
+-->
 <div class="container">
   <div class="row">
     <div class="container py-sm-4">
@@ -152,15 +151,14 @@
                   <h4 class="text-center my-1">Consultation&nbsp;</h4>
                 </div>
                 <div class="list-group-item text-uppercase font-weight-bold"> Free </div>
-                <a href="#" class="list-group-item">Telephhone Consultation&nbsp; &nbsp; </a>
-				<a href="#" class="list-group-item">This Web Site&nbsp; </a>
-			<!--	  
+                <a href="#" class="list-group-item">Telephhone Consultation&nbsp; &nbsp; </a> <a href="#" class="list-group-item">This Web Site&nbsp; </a> 
+                <!--	  
 				<a href="#"     class="list-group-item"> DNS Hosting </a>
 				<a href="#" class="list-group-item"> Mail Server</a>
                 <div class="list-group-item">
                   <button class="btn btn-success btn-lg btn-block text-truncate">Sign-up</button>
                 </div>
--->		  
+--> 
               </div>
             </div>
             <div class="col-md-4">
@@ -170,18 +168,14 @@
                   </h4>
                 </div>
                 <div class="list-group-item text-uppercase font-weight-bold"> $120/hr. </div>
-                <a href="#" class="list-group-item"> Telephone Audit </a>
-				<a href="#" class="list-group-item"> Video Conference Team Members </a>
-				<a href="#" class="list-group-item"> Written recomendations</a>
-				<a href="#" class="list-group-item"> Linux technical assistance</a>
-				<a href="#" class="list-group-item"> This Web Site</a>
-<!--				  
+                <a href="#" class="list-group-item"> Telephone Audit </a> <a href="#" class="list-group-item"> Video Conference Team Members </a> <a href="#" class="list-group-item"> Written recomendations</a> <a href="#" class="list-group-item"> Linux technical assistance</a> <a href="#" class="list-group-item"> This Web Site</a> 
+                <!--				  
 				<a href="#" class="list-group-item"> Mail Server </a>
 				<a href="#" class="list-group-item"> 24/7 Monitoring </a>
                 <div class="list-group-item">
                   <button class="btn btn-success btn-lg btn-block text-truncate">Buy Now</button>
                 </div>
--->		  
+--> 
               </div>
             </div>
             <div class="col-md-4 pl-2">
@@ -190,16 +184,12 @@
                   <h4 class="text-center my-1">On-Site Audit</h4>
                 </div>
                 <div class="list-group-item text-uppercase font-weight-bold"> $10,000 </div>
-                <a href="#" class="list-group-item"> Two weeks on-site </a>
-				<a href="#" class="list-group-item"> On-site audit</a>
-				<a href="#" class="list-group-item"> Written recomendations</a>
-				<a href="#" class="list-group-item"> Linux technical assistance</a>
-				<a href="#" class="list-group-item"> This Web Site (including private areas)</a>
-<!--				  
+                <a href="#" class="list-group-item"> Two weeks on-site </a> <a href="#" class="list-group-item"> On-site audit</a> <a href="#" class="list-group-item"> Written recomendations</a> <a href="#" class="list-group-item"> Linux technical assistance</a> <a href="#" class="list-group-item"> This Web Site (including private areas)</a> 
+                <!--				  
                 <div class="list-group-item">
                   <button class="btn btn-success btn-lg btn-block text-truncate">Contact Us</button>
                 </div>
--->				  
+--> 
               </div>
             </div>
           </div>
@@ -217,30 +207,34 @@
       <strong>RedFire Consultants.</strong><br>
       We are based in New England. Available 24x7,<br>
       and worldwide via the Internet.<br>
-		  <br>
-	  We'd love to get in touch with you. Just<br>
-	  email us at <a href="mailto:RedFireConsultants#gmail.com">RedFireConsultants@gmail.com</a>
-		  or drop us a line.
+      <br>
+      We'd love to get in touch with you. Just<br>
+      email us at <a href="mailto:RedFireConsultants#gmail.com">RedFireConsultants@gmail.com</a> or drop us a line.
       </address>
-		<div> <hr>
-			    <form name="contact" method="POST" netlify data-netlify-recaptcha="true">
-      <p>
-	<label>Your Name: <input type="text" name="name" /></label>   
-      </p>
-      <p>
-	<label>Your Email: <input type="email" name="email" required /></label>
-      </p>
-      <p>
-	<label>Message: <textarea name="message"></textarea></label>
-      </p>
-      <div data-netlify-recaptcha="true"></div>
-      <p>
-	<button type="submit">Send</button>
-      </p>
-    </form>	
-
-		</div>
-<!--		
+      <div>
+        <hr>
+        <form name="contact" method="POST" netlify data-netlify-recaptcha="true">
+          <p>
+            <label>Your Name:
+              <input type="text" name="name" />
+            </label>
+          </p>
+          <p>
+            <label>Your Email:
+              <input type="email" name="email" required />
+            </label>
+          </p>
+          <p>
+            <label>Message:
+              <textarea name="message"></textarea>
+            </label>
+          </p>
+          <p>
+            <button type="submit">Send</button>
+          </p>
+        </form>
+      </div>
+      <!--		
       <h4>Social</h4>
       <div class="row">
         <div class="col-2"><img class="rounded-circle" src="images/32X32.gif" alt=""></div>
@@ -248,9 +242,9 @@
         <div class="col-2"><img class="rounded-circle" src="images/32X32.gif" alt=""></div>
         <div class="col-2"><img class="rounded-circle" src="images/32X32.gif" alt=""></div>
       </div>
-	-->	
+	--> 
     </div>
-	  <!--
+    <!--
     <div class="col-lg-4 col-md-6 col-12">
       <h2>Testimonials</h2>
       <ul class="list-unstyled">
@@ -268,12 +262,12 @@
         </li>
       </ul>
     </div>
-	 --> 
+	 -->
     <div class="col-lg-4 col-12 col-xl-8">
       <h2>About Our Founder</h2>
-      <p>Over the last forty-five years, I've consulted as a software engineer on a number of troubled Embedded Linux software engineering projects. I've beem successful because I've brought skills in Organizational Development, Paramedicine, and Enginering. This unique perspective brings results.</p>
-		<p>Now, I'd like to bring this unique perspective to bear for you.</p>
-      <p>I have a Masters in Business Administration ( M.B.A.), a Bachelor of Science (B.S.) in Engineering Physics, and for about fifteen years, was a licensed EMT/Paramedic.</p>
+      <p> Over the last forty-five years, I've consulted as a software engineer on many troubled Embedded Linux software engineering projects. I've been successful because I've brought skills in Organizational Development, Paramedicine, and Engineering. This unique perspective brings results. </p>
+      <p>Now, I'd like to bring this unique perspective to bear for you. </p>
+      <p>I have a Master’s in Business Administration (M.B.A.), a Bachelor of Science (B.S.) in Engineering Physics, and for about fifteen years, was a licensed EMT/Paramedic.</p>
     </div>
   </div>
 </div>
