fix broken link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <div class="text-center col-md-6 col-12 col-xl-12">
     <h3>How we do it</h3>
 	    
-    <p>We bring four critical skills to bear on your project. They work in synergy to produce results and are discussed briefly below. Many <a href="/casestudies">case studies</a> are also presented to help illustrate this methodology.</p>
+    <p>We bring four critical skills to bear on your project. They work in synergy to produce results and are discussed briefly below. Many <a href="/casestudies/case-studies.html">case studies</a> are also presented to help illustrate this methodology.</p>
     
     <!-- <a class="btn btn-danger btn-lg" href="#" role="button">Tutorials</a> </div> --> 
     <!--
