tighten up wording

--- a/casestudies/case-studies.html
+++ b/casestudies/case-studies.html
@@ -33,7 +33,7 @@
         <h1 class="text-center f2 f1-2 b di lh-title mb3 white mw6 bg-primary">Case Studies&nbsp;</h1>
 		  <br> <br>
         <p class="text-center f3-m">
-        Here are a number of case studies that discuss troubled software.<br>
+        Here are case studies that discuss troubled software<br>
         projects, their analysis, and what can be done.
         </p>
       </div>
